--- a/css/abstracts/_mixins.scss
+++ b/css/abstracts/_mixins.scss
@@ -28,3 +28,9 @@
         + 'Please make sure it is defined in `$breakpoints` map.';
     }
 }
+
+@mixin flex($align, $justify) {
+    display: flex;
+    align-items: $align;
+    justify-content: $justify;
+}
