--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -1,3 +1,17 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+
+.section-header {
+    background-color: $color-fiord;
+
+    .section-inner {
+        @include flex(flex-start, space-between);
+
+        padding: 45px 0;
+    }
+}
+
+.header__contacts {
+    margin-top: 10px;
+}
