--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,9 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/logo',
+  'components/contacts';
 
 // 6. Page-specific styles
 @import
