--- a/css/abstracts/_mixins.scss
+++ b/css/abstracts/_mixins.scss
@@ -34,3 +34,16 @@
     align-items: $align;
     justify-content: $justify;
 }
+
+@mixin btnReset {
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    overflow: visible;
+    background: transparent;
+    color: inherit;
+    font: inherit;
+    line-height: normal;
+    cursor: pointer;
+}
